--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/styles/lesson-3/vendor.css">
-
+  <!-- в этом задании сможете поделиться проектом в соцсетях -->
+  <!-- чтобы на смартфонах ваших подписчиков всё было ок — нужна следующая строка кода -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Кнопка для Кати и Саши</title>
   <!-- подключение файла стилей -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button>Нравится</button>
+  <button>Like</button>
+
+  <!-- подключение библиотеки p5.js -->
+  <script src="https://code.s3.yandex.net/web-code/libs/p5.js"></script>
+  <!-- подключение файла с js -->
+  <script src="script.js"></script>
 </body>
 </html>
